fix: markdown links use light blue color for dark theme visibility

--- a/src/app/@shared/styles/ngx-markdown-styles.less
+++ b/src/app/@shared/styles/ngx-markdown-styles.less
@@ -5,6 +5,10 @@ markdown {
     color: @devui-aide-text;
   }
 
+  a {
+    color: #5bc0de !important;
+  }
+
   ul {
     margin-left: 2em;
     li {
